deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
spec:
  # how many Pods will be running
  replicas: 2
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      # connecting to the Service resource
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx-container:nginx:alpine3.18
        image: nginx
