service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  # connects the Service and the Pod
  # the Pod should have a label app=nginx
  # we will fix that in a bit
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
